--- a/netlify.toml
+++ b/netlify.toml
@@ -210,6 +210,7 @@ schedule = "*/10 * * * *"
     "node-fetch"
   ]
 
+  schedule = "*/15 * * * *"
 [[scheduled.functions]]
 path = "autopick-vip-run2"
 schedule = "*/15 * * * *"
