--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,7 @@
   external_node_modules = ["@supabase/supabase-js","openai"]
 
 # (mantengo tus redirects básicos; si no los usas, no pasa nada)
+  node_bundler = "zisi"
 [[redirects]]
   from = "/diag"
   to   = "/.netlify/functions/diagnostico-total"
