--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@supabase/supabase-js": "^2.56.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.6.1",
-    "node-fetch": "3.3.2",
+    "node-fetch": "^3.3.2",
     "openai": "^4.104.0"
   }
 }
