chore(gitignore): ignorar backups locales .bak y .backup.*

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ tools/*.js
 # local backups/tools
 netlify/functions/_lib/match-helper.cjs.bak.*
 tools/*.js
+
+# local backups
+*.bak.*
+*.BAK.*
+.backup.*
