--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint:send-report": "bash tests/check_send_report_grep.sh",
     "verify:send-report": "npm run lint:send-report && npm run test:send-report && npm run test:send-report-edges",
     "test:send-report-edges": "node tests/send_report.edges.js",
-    "test:oneshot": "node tests/oneshot.enrich.smoke.js"
+    "test:oneshot": "node tests/oneshot.enrich.smoke.js",
+    "test:oneshot-int": "node tests/oneshot.enrich.integration.js",
+    "test:oneshot-wire": "node tests/oneshot.wire.integration.js"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
