--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:send-report-edges": "node tests/send_report.edges.js",
     "test:oneshot": "node tests/oneshot.enrich.smoke.js",
     "test:oneshot-int": "node tests/oneshot.enrich.integration.js",
-    "test:oneshot-wire": "node tests/oneshot.wire.integration.js"
+    "test:oneshot-wire": "node tests/oneshot.wire.integration.js",
+    "test:markets": "node tests/market.mapping.spec.js"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
