--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,4 @@ jobs:
         with:
           node-version: '22'
       - run: npm ci || npm i
-      - run: npm run verify:send-report
-      - run: npm run test:oneshot
-      - run: npm run test:oneshot-wire
-      - run: npm run test:markets
+      - run: npm run verify:all
