--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,8 @@
-name: CI
-
+name: verify-all
 on:
-  push:
   pull_request:
-
+  push:
+    branches: [ chore/**, feat/**, main, develop ]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -11,6 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '22'
-      - run: npm ci || npm i
+          node-version: '22.17.0'
+          cache: 'npm'
+      - run: npm ci
       - run: npm run verify:all
