--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "test:oneshot-wire": "node tests/oneshot.wire.integration.js",
     "test:markets": "node tests/market.mapping.spec.js",
     "test:oneshot-meta": "node tests/oneshot.meta.spec.js",
-    "verify:all": "npm run verify:send-report && npm run test:oneshot && npm run test:oneshot-wire && npm run test:markets && npm run test:oneshot-meta",
+    "verify:all": "npm run verify:send-report && npm run test:oneshot && npm run test:oneshot-wire && npm run test:markets && npm run test:oneshot-meta && npm run test:flags",
     "manual:oneshot": "node tests/oneshot.manual.js",
-    "manual:dry": "DISABLE_OPENAI=1 ODDS_ENRICH_ONESHOT=0 node tests/oneshot.manual.js"
+    "manual:dry": "DISABLE_OPENAI=1 ODDS_ENRICH_ONESHOT=0 node tests/oneshot.manual.js",
+    "test:flags": "node tests/flags.smoke.spec.js"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
