scanner: batch v2 (score compuesto 1x2) + scan estable + helpers

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@ ODDS_MARKETS=h2h,totals,spreads
 ODDS_MARKETS_CANON=1x2,btts,over_2_5,doublechance
 ODDS_ENRICH_ONESHOT=1
 DEBUG_TRACE=0
+# ---- Scanner ----
+ODDS_API_KEY=__PON_AQUI_TU_KEY__
+ODDS_BASE=https://api.the-odds-api.com/v4
+ODDS_SCAN_SPORTS=soccer_epl,soccer_spain_la_liga,soccer_italy_serie_a
+ODDS_SCAN_DAYS_AHEAD=2
+ODDS_SCAN_MAX=150
+ODDS_SCAN_TTL_MS=600000
