scan: helpers + weights.jq + QoL shell funcs

--- a/.env
+++ b/.env
@@ -12,3 +12,16 @@ ODDS_SCAN_SPORTS=soccer_epl,soccer_spain_la_liga,soccer_italy_serie_a
 ODDS_SCAN_DAYS_AHEAD=2
 ODDS_SCAN_MAX=150
 ODDS_SCAN_TTL_MS=600000
+# ---- Ranking multi-mercado ----
+WEIGHT_1X2=0.6
+WEIGHT_BTTS=0.2
+WEIGHT_OU=0.15
+WEIGHT_DNB=0.05
+
+# ---- Umbrales mínimos (calidad) ----
+RANK_MIN_BOOKS_1X2=1
+RANK_MIN_BOOKS_ANY=1
+RANK_MIN_TOTAL_MARKETS=1
+
+# ---- Performance ----
+BATCH_SLEEP_MS=0
