CI: unit tests + optional serve/smoke; helpers y env example

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
-# OddsAPI
-ODDS_API_KEY=
+# Odds
+ODDS_API_KEY=__put_here__
 ODDS_REGIONS=us,uk,eu,au
-ODDS_SPORT_KEY=soccer
-ODDS_ENRICH_ONESHOT=0
+SPORT_KEY=soccer
 
-# Telegram Groups
-TG_VIP_CHAT_ID=
-TG_FREE_CHAT_ID=
-SEND_ENABLED=0
+# API-Football
+API_FOOTBALL_KEY=__put_here__
 
 # Debug
-DEBUG_TRACE=0
-MIN_VIP_EV=
-ODDS_TIMEOUT_MS=8000
+AF_VERBOSE=0
+SIM_THR=0.60
+STRICT_MATCH=0
+
+# Telegram / Supabase (placeholders)
+SUPABASE_URL=__put_here__
+SUPABASE_KEY=__put_here__
+TELEGRAM_BOT_TOKEN=__put_here__
+AUTH_CODE=__put_here__
