--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,26 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      # Opcionalmente define AF_VERBOSE para tener trazas en resolver
+      AF_VERBOSE: "0"
+      # Si defines estos secretos en el repo, el job generará dump real y correrá el smoke:
+      API_FOOTBALL_KEY: ${{ secrets.API_FOOTBALL_KEY }}
+      ODDS_API_KEY: ${{ secrets.ODDS_API_KEY }}
+      ODDS_REGIONS: "us,uk,eu,au"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '22'
-      - run: npm ci || npm i
-      - run: npm run verify:all
+          node-version: '20'
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run -s ci:unit
+      - name: Install Netlify CLI
+        run: npm i -g netlify-cli
+      - name: Start functions:serve
+        run: npm run -s ci:serve
+      - name: Make CI dump (optional)
+        run: npm run -s ci:dump
+      - name: Smoke resolveEvt (optional)
+        run: npm run -s ci:smoke
