ci: guardrail anti nombres fijos + integrar en pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci
+      - run: npm run -s ci:guard
       - run: npm run -s ci:unit
       - name: Install Netlify CLI (pinned)
         run: npm i -g netlify-cli@17
