--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "ci:serve": "bash scripts/ci-serve.sh",
     "ci:dump": "bash scripts/ci-make-dump.sh",
     "ci:smoke": "bash scripts/smoke-resolveEvt.sh",
-    "ci": "npm run -s ci:unit && npm run -s ci:serve && npm run -s ci:dump && npm run -s ci:smoke"
+    "ci": "npm run -s ci:guard && npm run -s ci:unit && npm run -s ci:serve && npm run -s ci:dump && npm run -s ci:smoke",
+    "ci:guard": "bash scripts/ci-no-hardcoded-entities.sh"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
