--- a/.env
+++ b/.env
@@ -33,3 +33,5 @@ MIN_BOOKS_1X2=1
 MIN_BOOKS_BTTS=1
 MIN_BOOKS_OU25=1
 MIN_BOOKS_DNB=1
+API_FOOTBALL_KEY=47d9165f51bf536b4dfbc631561a0058
+AF_VERBOSE=1
