--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ tools/*.js
 backups/
 *.bak*
 netlify/functions.bak.*/
+
+# dev caches / herramientas (no versionar jamás)
+**/.config/
+**/.npm/
+**/_update-notifier-last-checked
+*.log
+
+# backups locales varios
+*.funcbak.*
+*.bak.*
+*.bak
