--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,19 @@ tools/*.js
 *.BAK.*
 .backup.*
 *.bak
+
+# local backups
+backups/
+*.bak*
+netlify/functions.bak.*/
+
+# dev caches / herramientas (no versionar jamás)
+**/.config/
+**/.npm/
+**/_update-notifier-last-checked
+*.log
+
+# backups locales varios
+*.funcbak.*
+*.bak.*
+*.bak
