chore(af): helper H2H + DRY quick/windoweval; smoke/health/quota; docs/env

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
-# Odds
-ODDS_API_KEY=__put_here__
-ODDS_REGIONS=us,uk,eu,au
-SPORT_KEY=soccer
+# === PunterX / AF (solo nombres; NO pongas valores reales aquí) ===
+# Claves AF (una de estas debe existir en runtime)
+API_FOOTBALL_KEY=
+APIFOOTBALL_KEY=
+API_FOOTBALL=
 
-# API-Football
-API_FOOTBALL_KEY=__put_here__
+# Tuning y umbrales (opcional)
+AF_MATCH_PAD_DAYS=14
+SIM_THR=0.60
+MATCH_LEAGUE_WEIGHT=0.10
+MATCH_COUNTRY_WEIGHT=0.05
+AF_LEAGUE_MIN_SIM=0
+AF_COUNTRY_MIN_SIM=0
+AF_BTEAM_PENALTY=0.20
 
 # Debug
-AF_VERBOSE=0
-SIM_THR=0.60
-STRICT_MATCH=0
-
-# Telegram / Supabase (placeholders)
-SUPABASE_URL=__put_here__
-SUPABASE_KEY=__put_here__
-TELEGRAM_BOT_TOKEN=__put_here__
-AUTH_CODE=__put_here__
+AF_DEBUG=
+AF_VERBOSE=
