chore(lambda): add autopick-vip-run3 as clean delegator (zisi + included_files)

--- a/netlify.toml
+++ b/netlify.toml
@@ -16,3 +16,7 @@
 # --- override solo para autopick-outrights (resolver parser de zisi) ---
 [functions."autopick-outrights"]
   node_bundler = "esbuild"
+
+[functions."autopick-vip-run3"]
+  node_bundler = "zisi"
+  included_files = ["netlify/functions/_lib/autopick-vip-nuevo-impl.cjs"]
