chore(lambda): add diag-lib-scan to probe _lib/** modules

--- a/netlify.toml
+++ b/netlify.toml
@@ -24,3 +24,7 @@
 [functions."autopick-vip-run3"]
   node_bundler = "zisi"
   included_files = ["netlify/functions/_lib/**"]
+
+[functions."diag-lib-scan"]
+  node_bundler = "zisi"
+  included_files = ["netlify/functions/_lib/**"]
