--- a/netlify.toml
+++ b/netlify.toml
@@ -17,14 +17,16 @@
 [functions."autopick-outrights"]
   node_bundler = "esbuild"
 
-[functions."diag-impl-call"]
-  node_bundler = "zisi"
-  included_files = ["netlify/functions/_lib/**"]
-
-[functions."autopick-vip-run3"]
-  node_bundler = "zisi"
-  included_files = ["netlify/functions/_lib/**"]
-
 [functions."diag-lib-scan"]
   node_bundler = "zisi"
   included_files = ["netlify/functions/_lib/**"]
+
+[functions."diag-impl-call"]
+  node_bundler = "esbuild"
+  included_files = ["netlify/functions/_lib/**"]
+  external_node_modules = ["openai"]
+
+[functions."autopick-vip-run3"]
+  node_bundler = "esbuild"
+  included_files = ["netlify/functions/_lib/**"]
+  external_node_modules = ["openai"]
