chore(netlify): esbuild+external_node_modules for diag-lib-scan

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,16 +17,17 @@
 [functions."autopick-outrights"]
   node_bundler = "esbuild"
 
-[functions."diag-lib-scan"]
-  node_bundler = "zisi"
-  included_files = ["netlify/functions/_lib/**"]
-
 [functions."diag-impl-call"]
   node_bundler = "esbuild"
   included_files = ["netlify/functions/_lib/**"]
   external_node_modules = ["openai"]
 
 [functions."autopick-vip-run3"]
+  node_bundler = "esbuild"
+  included_files = ["netlify/functions/_lib/**"]
+  external_node_modules = ["openai"]
+
+[functions."diag-lib-scan"]
   node_bundler = "esbuild"
   included_files = ["netlify/functions/_lib/**"]
   external_node_modules = ["openai"]
