ci(smoke): workflow bash con trim y asserts 200/403

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Show context (raw vs trim)
+      - name: Show context (raw vs trim) + export
         shell: bash
         run: |
           set -euo pipefail
@@ -28,9 +28,19 @@ jobs:
           DT_RAW="${DEBUG_TOKEN:-}"
           SB_TRIM="$(printf "%s" "$SB_RAW" | tr -d '\r\n')"
           DT_TRIM="$(printf "%s" "$DT_RAW" | tr -d '\r\n')"
-          echo "[AF_DEBUG] GITHUB_SHA=$GITHUB_SHA"
+
           echo "[AF_DEBUG] SITE_BASE raw len=${#SB_RAW}  trim len=${#SB_TRIM}"
           echo "[AF_DEBUG] DEBUG_TOKEN raw len=${#DT_RAW} trim len=${#DT_TRIM}"
+
+          if [ -z "$SB_TRIM" ] || [ -z "$DT_TRIM" ]; then
+            echo "::error::Secrets vacíos (tras trim). Revisa SITE_BASE/DEBUG_TOKEN"
+            exit 1
+          fi
+
+          {
+            echo "SB_TRIM=$SB_TRIM"
+            echo "DT_TRIM=$DT_TRIM"
+          } >> "$GITHUB_ENV"
 
       - name: Install jq & curl
         shell: bash
@@ -41,56 +51,49 @@ jobs:
 
       - name: Smoke (diag-impl-call + autopick-vip-run3)
         shell: bash
-        env:
-          BASE: ${{ secrets.SITE_BASE }}
-          TOKEN_RAW: ${{ secrets.DEBUG_TOKEN }}
         run: |
           set -euo pipefail
-          BASE_TRIM="$(printf "%s" "${BASE:-}" | tr -d '\r\n')"
-          TOKEN="$(printf "%s" "${TOKEN_RAW:-}" | tr -d '\r\n')"
-
-          echo "[AF_DEBUG] BASE=$BASE_TRIM"
-          echo "[AF_DEBUG] DEBUG_TOKEN len (trim) = ${#TOKEN}"
-
-          test -n "$BASE_TRIM" || { echo "::error::SITE_BASE vacío"; exit 1; }
-          test -n "$TOKEN"     || { echo "::error::DEBUG_TOKEN vacío"; exit 1; }
+          BASE="$SB_TRIM"
+          TKN="$DT_TRIM"
+          echo "[AF_DEBUG] BASE=$BASE"
+          echo "[AF_DEBUG] DEBUG_TOKEN len (trim) = ${#TKN}"
 
           pass=1
 
-          smoke_inspect () {
-            local fn="$1" code
+          smoke_fn () {
+            local fn="$1"
+
+            # inspect -> 200 + hasHandler==true
+            local code
             code=$(curl -sS -o "/tmp/${fn}_i.json" -w '%{http_code}' \
-              "$BASE_TRIM/$fn?inspect=1&debug=1" \
-              -H "x-debug: 1" -H "x-debug-token: $TOKEN")
-            jq . "/tmp/${fn}_i.json" >/dev/null 2>&1 || true
-            if [ "$code" = "200" ] && jq -e '.hasHandler==true' "/tmp/${fn}_i.json" >/dev/null 2>&1; then
+              "$BASE/$fn?inspect=1&debug=1" \
+              -H "x-debug: 1" -H "x-debug-token: $TKN")
+
+            if [ "$code" = "200" ] && jq -e '.hasHandler==true' </tmp/"${fn}"_i.json >/dev/null 2>&1; then
               echo "[AF_DEBUG] $fn inspect OK (200)"
             else
               echo "[AF_DEBUG] $fn inspect FAIL (code=$code)"; pass=0
+              jq . "/tmp/${fn}_i.json" 2>/dev/null || cat "/tmp/${fn}_i.json" || true
             fi
-          }
 
-          smoke_bypass () {
-            local fn="$1" code
+            # bypass -> 403
             code=$(curl -sS -o "/tmp/${fn}_b.json" -w '%{http_code}' \
-              "$BASE_TRIM/$fn?bypass=1&debug=1" \
-              -H "x-debug: 1" -H "x-debug-token: $TOKEN")
-            echo "[AF_DEBUG] $fn bypass code=$code"
-            jq . "/tmp/${fn}_b.json" || cat "/tmp/${fn}_b.json" || true
+              "$BASE/$fn?bypass=1&debug=1" \
+              -H "x-debug: 1" -H "x-debug-token: $TKN")
             if [ "$code" = "403" ]; then
               echo "[AF_DEBUG] $fn bypass OK (403)"
             else
               echo "[AF_DEBUG] $fn bypass FAIL (code=$code)"; pass=0
+              jq . "/tmp/${fn}_b.json" 2>/dev/null || cat "/tmp/${fn}_b.json" || true
             fi
           }
 
-          smoke_inspect diag-impl-call
-          smoke_inspect autopick-vip-run3
-          smoke_bypass  diag-impl-call
-          smoke_bypass  autopick-vip-run3
+          smoke_fn "diag-impl-call"
+          smoke_fn "autopick-vip-run3"
 
-          if [ "$pass" -eq 1 ]; then
+          if [ "$pass" = "1" ]; then
             echo "[AF_DEBUG] SMOKE OK"
           else
-            echo "::error::SMOKE FAILED"; exit 1
+            echo "::error::SMOKE FAILED"
+            exit 1
           fi
