--- a/.github/workflows/smoke-func.yml
+++ b/.github/workflows/smoke-func.yml
@@ -1,4 +1,4 @@
-name: Smoke Functions
+name: Smoke Functions v2
 
 on:
   workflow_dispatch:
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Show context (raw vs trim)
         shell: bash
         run: |
