--- a/.github/workflows/smoke-func.yml
+++ b/.github/workflows/smoke-func.yml
@@ -5,9 +5,34 @@ permissions:
   contents: read
   actions: write
 jobs:
-  ping:
+  smoke:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    env:
+      SITE_BASE: ${{ secrets.SITE_BASE }}
+      DEBUG_TOKEN: ${{ secrets.DEBUG_TOKEN }}
     steps:
-      - name: Echo ok
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Show context (raw vs trim)
         shell: bash
-        run: echo "[AF_DEBUG] v2 reindexed"
+        run: |
+          set -euo pipefail
+          SB_RAW="${SITE_BASE:-}"
+          DT_RAW="${DEBUG_TOKEN:-}"
+          SB_TRIM="$(printf "%s" "$SB_RAW" | tr -d '\r\n')"
+          DT_TRIM="$(printf "%s" "$DT_RAW" | tr -d '\r\n')"
+
+          echo "[AF_DEBUG] SITE_BASE raw len=${#SB_RAW}  trim len=${#SB_TRIM}"
+          echo "[AF_DEBUG] DEBUG_TOKEN raw len=${#DT_RAW} trim len=${#DT_TRIM}"
+
+          SB_BYTES=$(printf "%s" "$SB_TRIM" | wc -c)
+          DT_BYTES=$(printf "%s" "$DT_TRIM" | wc -c)
+          echo "[AF_DEBUG] SITE_BASE bytes=$SB_BYTES"
+          echo "[AF_DEBUG] DEBUG_TOKEN bytes=$DT_BYTES"
+
+          if [ "$SB_BYTES" -lt 10 ] || [ "$DT_BYTES" -lt 8 ]; then
+            echo "::error::Secrets vacíos o demasiado cortos tras trim"
+            exit 1
+          fi
