--- a/.github/workflows/smoke-run.yml
+++ b/.github/workflows/smoke-run.yml
@@ -38,6 +38,22 @@ jobs:
           echo "[AF_DEBUG] /ping code=$code"
           cat /tmp/ping.json 2>/dev/null || true
 
+          code2=$(curl -sS -o /tmp/diag.json -w '%{http_code}'             "$SB/diag-resolver?inspect=1"             -H "x-debug: 1" -H "x-debug-token: $DT" || echo curl_failed)
+          echo "[AF_DEBUG] /diag-resolver?inspect=1 code=$code2"
+          (jq . /tmp/diag.json 2>/dev/null || cat /tmp/diag.json || true)
+
+        shell: bash
+        run: |
+          echo "[AF_DEBUG] curl block start"
+          set -euo pipefail
+          echo "[AF_DEBUG] curl --version:"; curl --version | head -n1 || true
+          echo "[AF_DEBUG] BASE=$SB"
+          echo "[AF_DEBUG] DT_len=${#DT}"
+
+          code=$(curl -sS -o /tmp/ping.json -w '%{http_code}' "$SB/ping" || echo curl_failed)
+          echo "[AF_DEBUG] /ping code=$code"
+          cat /tmp/ping.json 2>/dev/null || true
+
           # intento con header privado
           code2=$(curl -sS -o /tmp/i.json -w '%{http_code}' \
             "$SB/diag-resolver?inspect=1" \
