--- a/.github/workflows/smoke-run.yml
+++ b/.github/workflows/smoke-run.yml
@@ -60,3 +60,12 @@ jobs:
             -H "x-debug: 1" -H "x-debug-token: $DT" || echo curl_failed)
           echo "[AF_DEBUG] /diag-resolver?inspect=1 code=$code2"
           jq . /tmp/i.json 2>/dev/null || cat /tmp/i.json || true
+      - name: AF Smoke (minimal)
+        shell: bash
+        run: |
+          set -euo pipefail
+          url="$SB/af-smoke"
+          echo "[AF_DEBUG] hitting $url"
+          code=$(curl -sS -o /tmp/af.json -w '%{http_code}' "$url" -H "x-debug-token: $DT" || echo curl_failed)
+          echo "[AF_DEBUG] /af-smoke code=$code"
+          jq . /tmp/af.json 2>/dev/null || cat /tmp/af.json || true
