ci(smoke): add inline measure to secrets-alt

--- a/.github/workflows/smoke-secrets-alt.yml
+++ b/.github/workflows/smoke-secrets-alt.yml
@@ -17,3 +17,13 @@ jobs:
             b=$(printf '%s' "$v" | wc -c)
             echo "[AF_DEBUG] STEP_ENV $k bytes=$b"
           done
+      - name: Inline measure (new names)
+        shell: bash
+        run: |
+          set -euo pipefail
+          sb_b=$(printf '%s' "${{ secrets.SB_URL }}" | wc -c)
+          dt_b=$(printf '%s' "${{ secrets.DT_DBG }}" | wc -c)
+          cx_b=$(printf '%s' "${{ secrets.CTRL_X }}" | wc -c)
+          echo "[AF_DEBUG] INLINE SB_URL bytes=$sb_b"
+          echo "[AF_DEBUG] INLINE DT_DBG bytes=$dt_b"
+          echo "[AF_DEBUG] INLINE CTRL_X bytes=$cx_b"
