ci(smoke): add hex/b64 dump step to secrets-alt

--- a/.github/workflows/smoke-secrets-alt.yml
+++ b/.github/workflows/smoke-secrets-alt.yml
@@ -27,3 +27,13 @@ jobs:
           echo "[AF_DEBUG] INLINE SB_URL bytes=$sb_b"
           echo "[AF_DEBUG] INLINE DT_DBG bytes=$dt_b"
           echo "[AF_DEBUG] INLINE CTRL_X bytes=$cx_b"
+      - name: Hex/base64 of secrets (new names)
+        shell: bash
+        run: |
+          set -euo pipefail
+          for K in SB_URL DT_DBG CTRL_X; do
+            V="${{ secrets[env.K] }}"
+            printf '%s' "$V" | wc -c | xargs -I{} echo "[AF_DEBUG] ${K} bytes={}"
+            printf '%s' "$V" | head -c1 | od -An -t x1 | tr -d ' \n' | xargs -I{} echo "[AF_DEBUG] ${K} first-byte-hex={}"
+            printf '%s' "$V" | base64 | head -n1 | xargs -I{} echo "[AF_DEBUG] ${K} b64={}"
+          done
