--- a/.github/workflows/smoke-secrets-alt.yml
+++ b/.github/workflows/smoke-secrets-alt.yml
@@ -31,6 +31,18 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
+          SB="${{ secrets.SB_URL }}"
+          DT="${{ secrets.DT_DBG }}"
+          CX="${{ secrets.CTRL_X }}"
+          for K in SB DT CX; do
+            V="${!K}"
+            printf %s "$V" | wc -c | xargs -I{} echo "[AF_DEBUG] ${K} bytes={}"
+            printf %s "$V" | head -c1 | od -An -t x1 | tr -d " \n" | xargs -I{} echo "[AF_DEBUG] ${K} first-byte-hex={}"
+            printf %s "$V" | base64 | head -n1 | xargs -I{} echo "[AF_DEBUG] ${K} b64={}"
+          done
+        shell: bash
+        run: |
+          set -euo pipefail
           for K in SB_URL DT_DBG CTRL_X; do
             V="${{ secrets[env.K] }}"
             printf '%s' "$V" | wc -c | xargs -I{} echo "[AF_DEBUG] ${K} bytes={}"
