ci(smoke): accept nonce input + log it

--- a/.github/workflows/smoke-secrets-alt.yml
+++ b/.github/workflows/smoke-secrets-alt.yml
@@ -1,9 +1,16 @@
 name: Smoke Secrets Alt
 on: { workflow_dispatch: {} }
+  workflow_dispatch:
+    inputs:
+      nonce:
+        description: uniq ts
+        required: false
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
+      - name: Print dispatch nonce
+        run: echo "[AF_DEBUG] nonce=${{ github.event.inputs.nonce }}"
       - name: Step-env measure (new names)
         shell: bash
         env:
